src/test/ui/parser/bounds-lifetime-1.stderr
error: expected one of `,`, `:`, or `>`, found `'b`
  --> $DIR/bounds-lifetime-1.rs:3:17
   |
LL | type A = for<'a 'b> fn(); //~ ERROR expected one of `,`, `:`, or `>`, found `'b`
   |                 ^^ expected one of `,`, `:`, or `>` here

error: aborting due to previous error

